# test-openai-voicevox

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_client.py  run_server.py
app/: README.md  main.py  requirements.txt
app/api/: dependencies.py
app/config/: settings.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  ai_service.py  voice_service.py
client/: README.md  main.py  requirements.txt
client/core/: __init__.py  client.py  config.py
client/models/: __init__.py  audio_models.py
client/services/: __init__.py  api_service.py  audio_service.py
client/utils/: __init__.py  audio_utils.py
server/: db.py  main.py
server/api/: routes.py
server/config/: settings.py
server/services/: ai_service.py
