[project]
name = "test-openai-voicevox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.14",
    "google-auth==2.40.3",
    "google-genai==1.23.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "numpy>=2.3.1",
    "openai>=1.93.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyaudio>=0.2.14",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests==2.32.4",
    "rsa==4.9.1",
    "scipy>=1.16.0",
    "simpleaudio>=1.0.4",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "tenacity==8.5.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
]

[tool.uv.workspace]
